# crypto-aggregator-be/src/main/java/dev/rudyevhenii/crypto_aggregator/workspace/dto/UpdateChartWidgetPositionsRequest.java
@@ -1,0 +1,9 @@
+package dev.rudyevhenii.crypto_aggregator.workspace.dto;
+
+import java.util.UUID;
+
+public record UpdateChartWidgetPositionsRequest(
+        UUID chartWidgetId,
+        int position
+) {
+}
