# crypto-aggregator-be/src/main/resources/openapi/openapi-crypto.yaml
@@ -521,6 +521,33 @@ paths:
         "500":
           $ref: 'common-components.yaml#/components/responses/InternalServerError'
 
+  /api/workspaces/{workspaceId}/widgets/positions:
+    put:
+      summary: "Update chart widget positions"
+      operationId: "updateChartWidgetPositions"
+      tags:
+        - "ChartWidget"
+      parameters:
+        - $ref: '#/components/parameters/WorkspaceParam'
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: array
+              items:
+                $ref: '#/components/schemas/UpdateChartWidgetPositionsRequest'
+      responses:
+        "204":
+          description: "No content"
+        "400":
+          $ref: 'common-components.yaml#/components/responses/BadRequest'
+        "401":
+          $ref: 'common-components.yaml#/components/responses/UnauthorizedError'
+        "404":
+          $ref: 'common-components.yaml#/components/responses/NotFoundError'
+        "500":
+          $ref: 'common-components.yaml#/components/responses/InternalServerError'
+
 components:
   schemas:
     # ── Common enums & error models ───────────────────────────────
@@ -835,6 +862,18 @@ components:
       properties:
         chartInterval:
           $ref: '#/components/schemas/ChartInterval'
+
+    UpdateChartWidgetPositionsRequest:
+      type: object
+      required:
+        - chartWidgetId
+        - position
+      properties:
+        chartWidgetId:
+          type: string
+          format: uuid
+        position:
+          type: integer
 
   parameters:
     ExchangeParam:
